# ai-generation-portable-apps

./: .gitignore  API调用说明.md  CLAUDE.md  README.md  Start All.bat  Start All.command  Start Test.command  Stop Test.command  requirements.txt  启动器.command
feishu-generation-agent/: .env.example  .gitignore  README.md  pyproject.toml
feishu-generation-agent/docs/: production-bitable-activation.md
feishu-generation-agent/src/feishu_generation_agent/: bootstrap.py  config.py  main.py  ports.py
feishu-generation-agent/tests/: conftest.py
feishu-generation-agent/tests/fixtures/: bitable_fields.json  bitable_records.json  chiyun_inline_response.json  feishu_docx_blocks.json  feishu_storyboard_blocks.json  seedance_succeeded.json
feishu-generation-agent/tests/frontend/: bitable_state.test.cjs  reference_upload_state.test.cjs  review_state.test.cjs
feishu-generation-agent/tests/graph/: test_approval_graph.py  test_execution_graph.py
feishu-generation-agent/tests/integration/: test_api.py  test_bitable_mvp_api.py  test_bitable_mvp_restart.py  test_production_bitable_api.py  test_restart_recovery.py
feishu-generation-agent/tests/unit/: test_bitable_delivery.py  test_bitable_domain.py  test_bitable_mvp_service.py  test_bitable_store.py  test_chiyun.py  test_config.py  test_config_probe.py  test_domain.py  test_feishu_bitable.py  test_feishu_delivery.py  test_feishu_source.py  test_planner.py  test_production_bitable.py  test_production_delivery.py  test_production_service.py  test_production_tasks.py  test_provider_results.py  test_public_media.py  test_seedance.py  (+3 more)
(+158 files in other folders)
